--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@
   </div>
 
   <script>
-    // 🔥 Initialize Firebase (replace with your own)
-const firebaseConfig = {
-  apiKey: "AIzaSyAN9URR47HIBwIuBP3kSu5Rv_Ys0ef72-Q",
-  authDomain: "hangman-6a99e.firebaseapp.com",
-  databaseURL: "https://hangman-6a99e-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "hangman-6a99e",
-  storageBucket: "hangman-6a99e.firebasestorage.app",
-  messagingSenderId: "992689481911",
-  appId: "1:992689481911:web:6461e931ba4d96879ec532",
-  measurementId: "G-W1HFVTC23L"
-};
+    // 🔥 Initialize Firebase (replace with your own config)
+    const firebaseConfig = {
+      apiKey: "AIzaSyAN9URR47HIBwIuBP3kSu5Rv_Ys0ef72-Q",
+      authDomain: "hangman-6a99e.firebaseapp.com",
+      databaseURL: "https://hangman-6a99e-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "hangman-6a99e",
+      storageBucket: "hangman-6a99e.firebasestorage.app",
+      messagingSenderId: "992689481911",
+      appId: "1:992689481911:web:6461e931ba4d96879ec532"
+    };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
@@ -65,7 +64,7 @@ const firebaseConfig = {
       const id = "hangman-" + Math.random().toString(36).substr(2, 5);
       await db.ref("games/" + id).set({
         word,
-        guesses: [],
+        guesses: [], // ✅ ensure guesses exists
         wrong: 0,
         over: false
       });
@@ -74,6 +73,7 @@ const firebaseConfig = {
       linkEl.innerHTML = `Share this link: <a href="?game=${id}">${location.origin}${location.pathname}?game=${id}</a>`;
       showWord(word, []);
       listenToGame(id, word);
+      createLetterButtons(id);
     };
 
     function startGuessing(id) {
@@ -83,14 +83,18 @@ const firebaseConfig = {
           return;
         }
         const data = snap.val();
-        showWord(data.word, data.guesses);
+        showWord(data.word, data.guesses || []);
         createLetterButtons(id);
         listenToGame(id, data.word);
       });
     }
 
     function showWord(word, guesses) {
-      wordDiv.textContent = word.split("").map(l => guesses.includes(l) ? l : "_").join(" ");
+      guesses = guesses || []; // default to empty array
+      wordDiv.textContent = word
+        .split("")
+        .map(l => guesses.includes(l) ? l : "_")
+        .join(" ");
     }
 
     function createLetterButtons(id) {
@@ -103,6 +107,7 @@ const firebaseConfig = {
           btn.disabled = true;
           const snap = await db.ref("games/" + id).get();
           const data = snap.val();
+          if (!data.guesses) data.guesses = []; // ✅ ensure array exists
           if (data.over) return;
           if (!data.guesses.includes(letter)) {
             data.guesses.push(letter);
@@ -119,7 +124,7 @@ const firebaseConfig = {
       db.ref("games/" + id).on("value", snap => {
         const data = snap.val();
         if (!data) return;
-        showWord(data.word, data.guesses);
+        showWord(data.word, data.guesses || []);
         if (data.over) {
           msg.textContent = data.wrong >= 6 ? `💀 You lost! Word was ${data.word}` : "🎉 You won!";
           document.querySelectorAll("button").forEach(b => (b.disabled = true));
