--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     // 🔥 Initialize Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyAN9URR47HIBwIuBP3kSu5Rv_Ys0ef72-Q",
-      authDomain: "hangman-6a99e.firebaseapp.com",
-      databaseURL: "https://hangman-6a99e-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "hangman-6a99e",
-      storageBucket: "hangman-6a99e.firebasestorage.app",
-      messagingSenderId: "992689481911",
-      appId: "1:992689481911:web:6461e931ba4d96879ec532",
-      measurementId: "G-W1HFVTC23L"
+  authDomain: "hangman-6a99e.firebaseapp.com",
+  databaseURL: "https://hangman-6a99e-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "hangman-6a99e",
+  storageBucket: "hangman-6a99e.firebasestorage.app",
+  messagingSenderId: "992689481911",
+  appId: "1:992689481911:web:6461e931ba4d96879ec532",
+  measurementId: "G-W1HFVTC23L"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
@@ -113,3 +113,100 @@
     }
 
     function createLetterButtons(id) {
+      lettersDiv.innerHTML = "";
+      for (let i = 65; i <= 90; i++) {
+        const letter = String.fromCharCode(i);
+        const btn = document.createElement("button");
+        btn.textContent = letter;
+        btn.onclick = async () => {
+          btn.disabled = true;
+          const snap = await db.ref("games/" + id).get();
+          const data = snap.val();
+          if (!data || data.over) return;
+          if (!data.guesses.includes(letter)) {
+            data.guesses.push(letter);
+            if (!data.word.includes(letter)) data.wrong++;
+            if (data.wrong >= 6 || data.word.split("").every(l => data.guesses.includes(l))) data.over = true;
+            await db.ref("games/" + id).set(data);
+          }
+        };
+        lettersDiv.appendChild(btn);
+      }
+    }
+
+    function listenToGame(id) {
+      db.ref("games/" + id).on("value", snap => {
+        const data = snap.val();
+        if (!data) return;
+        showWord(data.word, data.guesses);
+        drawHangman(data.wrong);
+        if (data.over) {
+          msg.textContent = data.wrong >= 6 ? `💀 You lost! Word was ${data.word}` : "🎉 You won!";
+          document.querySelectorAll("#letters button").forEach(b => (b.disabled = true));
+        } else {
+          msg.textContent = "";
+        }
+      });
+    }
+
+    function restartGame(id) {
+      const newWord = prompt("Enter a new word to restart:").toUpperCase();
+      if (!newWord.match(/^[A-Z]+$/)) return alert("Letters only!");
+      db.ref("games/" + id).set({
+        word: newWord,
+        guesses: [],
+        wrong: 0,
+        over: false
+      });
+      showWord(newWord, []);
+      drawHangman(0);
+      createLetterButtons(id);
+      msg.textContent = "";
+    }
+
+    function drawHangman(wrong) {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.lineWidth = 2;
+      ctx.strokeStyle = "#000";
+
+      // Base structure
+      ctx.beginPath();
+      ctx.moveTo(10, 240); ctx.lineTo(190, 240);
+      ctx.moveTo(50, 240); ctx.lineTo(50, 20);
+      ctx.lineTo(130, 20); ctx.lineTo(130, 50);
+      ctx.stroke();
+
+      if (wrong > 0) { // Head
+        ctx.beginPath();
+        ctx.arc(130, 70, 20, 0, Math.PI * 2);
+        ctx.stroke();
+      }
+      if (wrong > 1) { // Body
+        ctx.beginPath();
+        ctx.moveTo(130, 90); ctx.lineTo(130, 150);
+        ctx.stroke();
+      }
+      if (wrong > 2) { // Left arm
+        ctx.beginPath();
+        ctx.moveTo(130, 100); ctx.lineTo(100, 130);
+        ctx.stroke();
+      }
+      if (wrong > 3) { // Right arm
+        ctx.beginPath();
+        ctx.moveTo(130, 100); ctx.lineTo(160, 130);
+        ctx.stroke();
+      }
+      if (wrong > 4) { // Left leg
+        ctx.beginPath();
+        ctx.moveTo(130, 150); ctx.lineTo(110, 200);
+        ctx.stroke();
+      }
+      if (wrong > 5) { // Right leg
+        ctx.beginPath();
+        ctx.moveTo(130, 150); ctx.lineTo(150, 200);
+        ctx.stroke();
+      }
+    }
+  </script>
+</body>
+</html>
