--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hänga gubbe — ett svenskt spel</title>
+  <title>Hänga gubbe — Multiplayer</title>
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database-compat.js"></script>
   <style>
@@ -72,6 +72,18 @@
       display: none;
     }
 
+    #lobby {
+      margin-top: 15px;
+      font-size: 1.1rem;
+      background: #fff;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 0 4px rgba(0,0,0,0.1);
+      max-width: 300px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     @media (max-width: 600px) {
       #word {
         font-size: 8vw;
@@ -89,7 +101,7 @@
   </style>
 </head>
 <body>
-  <h1> 🎮 Hänga gubbe — Multiplayer ⭐</h1>
+  <h1>🇸🇪 Hänga gubbe — Multiplayer</h1>
 
   <div id="setup">
     <input id="wordInput" placeholder="Skriv ett ord..." />
@@ -101,6 +113,7 @@
     <div id="word"></div>
     <div id="letters"></div>
     <div id="message"></div>
+    <div id="lobby"></div>
     <p id="link"></p>
     <button id="restartBtn">🔁 Spela igen</button>
     <button id="newWordBtn">✍️ Välj nytt ord</button>
@@ -111,14 +124,14 @@
 
     // 🔥 Firebase setup (replace with your own)
     const firebaseConfig = {
-      apiKey: "AIzaSyAN9URR47HIBwIuBP3kSu5Rv_Ys0ef72-Q",
-      authDomain: "hangman-6a99e.firebaseapp.com",
-      databaseURL: "https://hangman-6a99e-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "hangman-6a99e",
-      storageBucket: "hangman-6a99e.firebasestorage.app",
-      messagingSenderId: "992689481911",
-      appId: "1:992689481911:web:6461e931ba4d96879ec532",
-      measurementId: "G-W1HFVTC23L"
+  apiKey: "AIzaSyAN9URR47HIBwIuBP3kSu5Rv_Ys0ef72-Q",
+  authDomain: "hangman-6a99e.firebaseapp.com",
+  databaseURL: "https://hangman-6a99e-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "hangman-6a99e",
+  storageBucket: "hangman-6a99e.firebasestorage.app",
+  messagingSenderId: "992689481911",
+  appId: "1:992689481911:web:6461e931ba4d96879ec532",
+  measurementId: "G-W1HFVTC23L"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
@@ -128,6 +141,7 @@
     const wordDiv = document.getElementById("word");
     const lettersDiv = document.getElementById("letters");
     const msg = document.getElementById("message");
+    const lobbyDiv = document.getElementById("lobby");
     const linkEl = document.getElementById("link");
     const restartBtn = document.getElementById("restartBtn");
     const newWordBtn = document.getElementById("newWordBtn");
@@ -137,6 +151,7 @@
     const urlParams = new URLSearchParams(window.location.search);
     const gameId = urlParams.get("game");
     const letters = [..."ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖ"];
+    let nickname = "Axwell"; // default host nickname
 
     // 🧭 Host creates game
     document.getElementById("createBtn").onclick = async () => {
@@ -147,7 +162,8 @@
         word,
         guesses: [],
         wrong: 0,
-        over: false
+        over: false,
+        players: { host: "Axwell" }
       });
       window.location.href = `${location.origin}${location.pathname}?game=${id}`;
     };
@@ -156,7 +172,15 @@
     if (gameId) {
       setup.style.display = "none";
       gameDiv.style.display = "block";
+      // Prompt guest for nickname
+      nickname = nickname === "Axwell" ? prompt("Ange ditt namn:") || "Gäst" : nickname;
+      joinGame(gameId, nickname);
       startGame(gameId);
+    }
+
+    async function joinGame(id, name) {
+      const playerRef = db.ref("games/" + id + "/players/guest");
+      await playerRef.set(name);
     }
 
     function startGame(id) {
@@ -206,6 +230,14 @@
         if (!data) return;
         showWord(data.word, data.guesses);
         drawHangman(data.wrong);
+
+        // update lobby display
+        const players = data.players || {};
+        lobbyDiv.innerHTML = `
+          <strong>Spelare i lobbyn:</strong><br>
+          🧑 ${players.host || "Okänd"} (värd)<br>
+          👤 ${players.guest || "Ingen ansluten ännu"}
+        `;
 
         document.querySelectorAll("#letters button").forEach(b => {
           if (data.guesses.includes(b.textContent)) b.disabled = true;
@@ -267,7 +299,8 @@
         word: newWord,
         guesses: [],
         wrong: 0,
-        over: false
+        over: false,
+        players: { host: "Axwell" }
       });
       msg.textContent = "";
       restartBtn.style.display = "none";
