--- a/index.html
+++ b/index.html
@@ -79,9 +79,26 @@
       padding: 10px;
       border-radius: 8px;
       box-shadow: 0 0 4px rgba(0,0,0,0.1);
-      max-width: 300px;
+      max-width: 320px;
       margin-left: auto;
       margin-right: auto;
+    }
+
+    #turnIndicator {
+      font-size: 1.3rem;
+      font-weight: bold;
+      margin-bottom: 10px;
+      transition: all 0.3s ease;
+    }
+
+    /* 👀 blinking eyes animation */
+    .blink {
+      animation: blink 1.5s infinite;
+    }
+
+    @keyframes blink {
+      0%, 90%, 100% { opacity: 1; }
+      95% { opacity: 0.2; }
     }
 
     @media (max-width: 600px) {
@@ -111,6 +128,7 @@
   <div id="game" style="display:none;">
     <canvas id="hangman"></canvas>
     <div id="word"></div>
+    <div id="turnIndicator"></div>
     <div id="letters"></div>
     <div id="message"></div>
     <div id="lobby"></div>
@@ -145,13 +163,16 @@
     const linkEl = document.getElementById("link");
     const restartBtn = document.getElementById("restartBtn");
     const newWordBtn = document.getElementById("newWordBtn");
+    const turnIndicator = document.getElementById("turnIndicator");
     const canvas = document.getElementById("hangman");
     const ctx = canvas.getContext("2d");
 
     const urlParams = new URLSearchParams(window.location.search);
     const gameId = urlParams.get("game");
     const letters = [..."ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖ"];
-    let nickname = "Axwell"; // default host nickname
+
+    let nickname = "Axwell"; // default for host
+    let isHost = false;
 
     // 🧭 Host creates game
     document.getElementById("createBtn").onclick = async () => {
@@ -163,7 +184,8 @@
         guesses: [],
         wrong: 0,
         over: false,
-        players: { host: "Axwell" }
+        players: { host: "Axwell" },
+        turn: "guest"
       });
       window.location.href = `${location.origin}${location.pathname}?game=${id}`;
     };
@@ -172,23 +194,21 @@
     if (gameId) {
       setup.style.display = "none";
       gameDiv.style.display = "block";
-      // Prompt guest for nickname
-      nickname = nickname === "Axwell" ? prompt("Ange ditt namn:") || "Gäst" : nickname;
-      joinGame(gameId, nickname);
-      startGame(gameId);
-    }
-
-    async function joinGame(id, name) {
-      const playerRef = db.ref("games/" + id + "/players/guest");
-      await playerRef.set(name);
+      db.ref("games/" + gameId).get().then(async snap => {
+        if (!snap.exists()) return (msg.textContent = "❌ Spelet kunde inte hittas.");
+        const data = snap.val();
+        isHost = data.players?.host === "Axwell" && !data.players?.guest;
+        if (!isHost) {
+          nickname = prompt("Ange ditt namn:") || "Gäst";
+          await db.ref("games/" + gameId + "/players/guest").set(nickname);
+        }
+        startGame(gameId);
+      });
     }
 
     function startGame(id) {
       db.ref("games/" + id).get().then(snap => {
-        if (!snap.exists()) {
-          msg.textContent = "❌ Spelet kunde inte hittas.";
-          return;
-        }
+        if (!snap.exists()) return (msg.textContent = "❌ Spelet kunde inte hittas.");
         const data = snap.val();
         showWord(data.word, data.guesses);
         createLetterButtons(id);
@@ -209,10 +229,15 @@
         const btn = document.createElement("button");
         btn.textContent = letter;
         btn.addEventListener("click", async () => {
-          btn.disabled = true;
           const snap = await db.ref("games/" + id).get();
           const data = snap.val();
           if (!data || data.over) return;
+          const myRole = nickname === "Axwell" ? "host" : "guest";
+          if (data.turn !== myRole) {
+            alert("Det är inte din tur!");
+            return;
+          }
+          btn.disabled = true;
           if (!data.guesses.includes(letter)) {
             data.guesses.push(letter);
             if (!data.word.includes(letter)) data.wrong++;
@@ -228,21 +253,37 @@
       db.ref("games/" + id).on("value", snap => {
         const data = snap.val();
         if (!data) return;
+
         showWord(data.word, data.guesses);
         drawHangman(data.wrong);
 
-        // update lobby display
+        // Lobby display
         const players = data.players || {};
+        const guestJoined = !!players.guest;
         lobbyDiv.innerHTML = `
           <strong>Spelare i lobbyn:</strong><br>
           🧑 ${players.host || "Okänd"} (värd)<br>
-          👤 ${players.guest || "Ingen ansluten ännu"}
+          👤 ${players.guest || "Ingen ansluten ännu"}<br><br>
+          ${guestJoined ? (data.turn === "host" ? "🔤 Gästens tur att gissa!" : "✍️ Värden väljer ord!") : "⏳ Väntar på spelare ..."}
         `;
 
+        // Turn indicator
+        const myRole = nickname === "Axwell" ? "host" : "guest";
+        if (data.turn === myRole) {
+          turnIndicator.textContent = "🎯 Din tur att gissa!";
+          turnIndicator.style.color = "green";
+          turnIndicator.classList.remove("blink");
+        } else {
+          turnIndicator.innerHTML = "⏳ Vänta på din tur <span class='blink'>👀</span>";
+          turnIndicator.style.color = "gray";
+        }
+
+        // Disable already guessed letters
         document.querySelectorAll("#letters button").forEach(b => {
           if (data.guesses.includes(b.textContent)) b.disabled = true;
         });
 
+        // End-of-game messages
         if (data.over) {
           msg.textContent = data.wrong >= 6
             ? `💀 Du förlorade! Ordet var ${data.word}`
@@ -250,6 +291,7 @@
           restartBtn.style.display = "inline-block";
           newWordBtn.style.display = "inline-block";
         } else {
+          msg.textContent = "";
           restartBtn.style.display = "none";
           newWordBtn.style.display = "none";
         }
@@ -259,19 +301,19 @@
     function drawHangman(wrong) {
       const cw = canvas.clientWidth, ch = canvas.clientHeight;
       canvas.width = cw; canvas.height = ch;
-      const scaleX = cw / 200, scaleY = ch / 250;
+      const sX = cw / 200, sY = ch / 250;
       ctx.clearRect(0, 0, cw, ch);
-      ctx.lineWidth = 2 * Math.min(scaleX, scaleY);
+      ctx.lineWidth = 2 * Math.min(sX, sY);
       ctx.beginPath();
-      ctx.moveTo(10*scaleX,240*scaleY); ctx.lineTo(190*scaleX,240*scaleY);
-      ctx.moveTo(50*scaleX,240*scaleY); ctx.lineTo(50*scaleX,20*scaleY);
-      ctx.lineTo(130*scaleX,20*scaleY); ctx.lineTo(130*scaleX,50*scaleY); ctx.stroke();
-      if(wrong>0){ctx.beginPath();ctx.arc(130*scaleX,70*scaleY,20*scaleX,0,Math.PI*2);ctx.stroke();}
-      if(wrong>1){ctx.moveTo(130*scaleX,90*scaleY);ctx.lineTo(130*scaleX,160*scaleY);ctx.stroke();}
-      if(wrong>2){ctx.moveTo(130*scaleX,110*scaleY);ctx.lineTo(100*scaleX,140*scaleY);ctx.stroke();}
-      if(wrong>3){ctx.moveTo(130*scaleX,110*scaleY);ctx.lineTo(160*scaleX,140*scaleY);ctx.stroke();}
-      if(wrong>4){ctx.moveTo(130*scaleX,160*scaleY);ctx.lineTo(110*scaleX,200*scaleY);ctx.stroke();}
-      if(wrong>5){ctx.moveTo(130*scaleX,160*scaleY);ctx.lineTo(150*scaleX,200*scaleY);ctx.stroke();}
+      ctx.moveTo(10*sX,240*sY); ctx.lineTo(190*sX,240*sY);
+      ctx.moveTo(50*sX,240*sY); ctx.lineTo(50*sX,20*sY);
+      ctx.lineTo(130*sX,20*sY); ctx.lineTo(130*sX,50*sY); ctx.stroke();
+      if(wrong>0){ctx.beginPath();ctx.arc(130*sX,70*sY,20*sX,0,Math.PI*2);ctx.stroke();}
+      if(wrong>1){ctx.moveTo(130*sX,90*sY);ctx.lineTo(130*sX,160*sY);ctx.stroke();}
+      if(wrong>2){ctx.moveTo(130*sX,110*sY);ctx.lineTo(100*sX,140*sY);ctx.stroke();}
+      if(wrong>3){ctx.moveTo(130*sX,110*sY);ctx.lineTo(160*sX,140*sY);ctx.stroke();}
+      if(wrong>4){ctx.moveTo(130*sX,160*sY);ctx.lineTo(110*sX,200*sY);ctx.stroke();}
+      if(wrong>5){ctx.moveTo(130*sX,160*sY);ctx.lineTo(150*sX,200*sY);ctx.stroke();}
     }
 
     restartBtn.onclick = async () => {
@@ -282,11 +324,6 @@
       data.wrong = 0;
       data.over = false;
       await db.ref("games/" + gameId).set(data);
-      msg.textContent = "";
-      restartBtn.style.display = "none";
-      newWordBtn.style.display = "none";
-      createLetterButtons(gameId);
-      drawHangman(0);
     };
 
     newWordBtn.onclick = async () => {
@@ -295,18 +332,17 @@
         alert("Endast bokstäver (A-Ö) tillåtna!");
         return;
       }
+      const snap = await db.ref("games/" + gameId).get();
+      const data = snap.val();
+      const nextTurn = data.turn === "host" ? "guest" : "host";
       await db.ref("games/" + gameId).set({
         word: newWord,
         guesses: [],
         wrong: 0,
         over: false,
-        players: { host: "Axwell" }
+        players: data.players,
+        turn: nextTurn
       });
-      msg.textContent = "";
-      restartBtn.style.display = "none";
-      newWordBtn.style.display = "none";
-      createLetterButtons(gameId);
-      drawHangman(0);
     };
 
   }; // window.onload
