--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
   window.onload = () => {
     // 🔥 Firebase config (replace with your own)
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      databaseURL: "YOUR_DB_URL",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID",
-      measurementId: "YOUR_MEASUREMENT_ID"
+  apiKey: "AIzaSyAN9URR47HIBwIuBP3kSu5Rv_Ys0ef72-Q",
+  authDomain: "hangman-6a99e.firebaseapp.com",
+  databaseURL: "https://hangman-6a99e-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "hangman-6a99e",
+  storageBucket: "hangman-6a99e.firebasestorage.app",
+  messagingSenderId: "992689481911",
+  appId: "1:992689481911:web:6461e931ba4d96879ec532",
+  measurementId: "G-W1HFVTC23L"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
@@ -417,3 +417,4 @@
   </script>
 </body>
 </html>
+
